welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:5: error: ';' expected but ')' found.
} while (getCouleurSol()==Color.yellow));
                                       ^