welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
getCouleurSol();
do {
    avance();
} while (getCouleurSol()==Color.yellow));

